--- a/public/vi/404.html
+++ b/public/vi/404.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="vi" class="js csstransforms3d">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/ws-0001/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=ws-0001/livereload" data-no-instant defer></script>
   <meta charset="utf-8"> <meta name="description" content="">
 <meta name="author" content="tuanatran.vn@gmail.com">
- <link rel="icon" href="/images/favicon.png" type="image/png">
+ <link rel="icon" href="/ws-0001/images/favicon.png" type="image/png">
  
   <title>404 Page not found</title>
 
    
-    <link href="/css/nucleus.css?1713154755" rel="stylesheet">
-    <link href="/css/fontawesome-all.min.css?1713154755" rel="stylesheet">
-    <link href="/css/hybrid.css?1713154755" rel="stylesheet">
-    <link href="/css/featherlight.min.css?1713154755" rel="stylesheet">
-    <link href="/css/perfect-scrollbar.min.css?1713154755" rel="stylesheet">
-    <link href="/css/theme.css?1713154755" rel="stylesheet">
-    <link href="/css/hugo-theme.css?1713154755" rel="stylesheet">
+    <link href="/ws-0001/css/nucleus.css?1713155355" rel="stylesheet">
+    <link href="/ws-0001/css/fontawesome-all.min.css?1713155355" rel="stylesheet">
+    <link href="/ws-0001/css/hybrid.css?1713155355" rel="stylesheet">
+    <link href="/ws-0001/css/featherlight.min.css?1713155355" rel="stylesheet">
+    <link href="/ws-0001/css/perfect-scrollbar.min.css?1713155355" rel="stylesheet">
+    <link href="/ws-0001/css/theme.css?1713155355" rel="stylesheet">
+    <link href="/ws-0001/css/hugo-theme.css?1713155355" rel="stylesheet">
     
-      <link href="/css/theme-workshop.css?1713154755" rel="stylesheet">
+      <link href="/ws-0001/css/theme-workshop.css?1713155355" rel="stylesheet">
     
 <style>
     :root #header + #content > #left > #rlblock_left {
@@ -48,7 +48,7 @@
           </p>
           <p>Woops. Looks like this page doesn&#39;t exist ¯\_(ツ)_/¯.</p>
           <p></p>
-          <p><a href='/vi/'>Go to homepage</a></p>
+          <p><a href='/ws-0001/vi/'>Go to homepage</a></p>
           <p><img src='/images/gopher-404.jpg' style="width:50%" alt="Page not found!"></p>
         </div>
       </div>
